Fixed vertical alignment of checkboxes in SlickGrid.

--- a/slick-psl-theme.css
+++ b/slick-psl-theme.css
@@ -58,7 +58,6 @@ input.editor-text {
 }
 input.editor-checkbox {
   margin: 3px 5px 0 0;
-  height: 100%;
   padding: 0;
   border: 0;
 }
